k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
  selector:
    app: ecommerce-app
